--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <!-- Google Identity Services -->
   <script src="https://accounts.google.com/gsi/client" async defer></script>
-  <meta name="google-signin-client_id" content="TU_CLIENT_ID.apps.googleusercontent.com">
+  <meta name="google-signin-client_id" content="620961486430-sqlt42g1qbdm3ebkrvs5k5num4kl7fue.apps.googleusercontent.com">
 </head>
 <body>
 <div class="background-blur" id="background-blur"></div>
@@ -31,7 +31,7 @@
         <div class="social-container">
           <!-- Botón oficial de Google Sign-In -->
           <div id="g_id_onload"
-               data-client_id="TU_CLIENT_ID.apps.googleusercontent.com"
+               data-client_id="620961486430-sqlt42g1qbdm3ebkrvs5k5num4kl7fue.apps.googleusercontent.com"
                data-context="signin"
                data-ux_mode="popup"
                data-callback="handleCredentialResponse"
