--- a/form.html
+++ b/form.html
@@ -19,7 +19,7 @@
   </header>
 
   <section class="hero">
-    <h2>Hola, soy Juan Pérez</h2>
+    <h2>Hola, soy Valentin Soto</h2>
     <p>Estudiante de Ingeniería de Sistemas</p>
     <a href="#proyectos" class="btn">Ver proyectos</a>
   </section>
@@ -33,17 +33,23 @@
     <h2>Proyectos</h2>
     <div class="proyectos-container">
       <div class="card">
-        <h3>Calculadora Web</h3>
+        <h3>Semana-10-1 <br/> Calculadora Web</h3>
         <p>Una calculadora básica hecha con HTML, CSS y JavaScript.</p>
         <a href="#">Ver más</a>
       </div>
       <div class="card">
-        <h3>To-Do App</h3>
+        <h3>Semana-10-2 To-Do App</h3>
         <p>Una aplicación para gestionar tareas con almacenamiento local.</p>
         <a href="#">Ver más</a>
       </div>
       <div class="card">
-        <h3>Clon de Google</h3>
+        <h3>Semana-11 Clon de Google</h3>
+        <p>Interfaz simple que simula el buscador de Google.</p>
+        <a href="#">Ver más</a>
+      </div>
+    </div>
+    <div class="card">
+        <h3>Semana-12 Clon de Google</h3>
         <p>Interfaz simple que simula el buscador de Google.</p>
         <a href="#">Ver más</a>
       </div>
