--- a/form.html
+++ b/form.html
@@ -33,6 +33,41 @@
     <h2>Proyectos</h2>
     <div class="proyectos-container">
       <div class="card">
+        <h3>Semana-1 <br/> Calculadora Web</h3>
+        <p>Una calculadora básica hecha con HTML, CSS y JavaScript.</p>
+        <a href="#">Ver más</a>
+      </div>
+      <div class="card">
+        <h3>Semana-2 <br/> Calculadora Web</h3>
+        <p>Una calculadora básica hecha con HTML, CSS y JavaScript.</p>
+        <a href="#">Ver más</a>
+      </div>
+      <div class="card">
+        <h3>Semana-3 <br/> Calculadora Web</h3>
+        <p>Una calculadora básica hecha con HTML, CSS y JavaScript.</p>
+        <a href="#">Ver más</a>
+      </div>
+      <div class="card">
+        <h3>Semana-4 <br/> Calculadora Web</h3>
+        <p>Una calculadora básica hecha con HTML, CSS y JavaScript.</p>
+        <a href="#">Ver más</a>
+      </div>
+      <div class="card">
+        <h3>Semana-5 <br/> Calculadora Web</h3>
+        <p>Una calculadora básica hecha con HTML, CSS y JavaScript.</p>
+        <a href="#">Ver más</a>
+      </div>
+      <div class="card">
+        <h3>Semana-6 <br/> Calculadora Web</h3>
+        <p>Una calculadora básica hecha con HTML, CSS y JavaScript.</p>
+        <a href="#">Ver más</a>
+      </div>
+      <div class="card">
+        <h3>Semana-7 <br/> Examen Parcial</h3>
+        <p>Una calculadora básica hecha con HTML, CSS y JavaScript.</p>
+        <a href="#">Ver más</a>
+      </div>
+      <div class="card">
         <h3>Semana-10-1 <br/> Calculadora Web</h3>
         <p>Una calculadora básica hecha con HTML, CSS y JavaScript.</p>
         <a href="#">Ver más</a>
