--- a/form.html
+++ b/form.html
@@ -33,39 +33,41 @@
     <h2>Proyectos</h2>
     <div class="proyectos-container">
       <div class="card">
-        <h3>Semana-1 <br/> Calculadora Web</h3>
-        <p>Una calculadora básica hecha con HTML, CSS y JavaScript.</p>
-        <a href="#">Ver más</a>
+        <h3>Semana-1 <br/> Resumen </h3>
+        <p>Sobre el libro SGBD.</p>
+        <a href="https://www.canva.com/design/DAGji_mWwSs/zJUd2TxrcH3X4hvvLlT56Q/edit?utm_content=DAGji_mWwSs&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton ">Ver más</a>
       </div>
       <div class="card">
-        <h3>Semana-2 <br/> Calculadora Web</h3>
-        <p>Una calculadora básica hecha con HTML, CSS y JavaScript.</p>
-        <a href="#">Ver más</a>
+        <h3>Semana-2 <br/> Diagrama</h3>
+        <p>Diagramas entidad-relación. Miro.</p>
+        <a href="https://miro.com/app/board/uXjVIEWtAuc=/?share_link_id=802140616388 ">Ver primer diagrama</a>
+        <a href="https://miro.com/app/board/uXjVIEVsPow=/?share_link_id=35838702067 ">Ver segundo diagrama</a>
       </div>
       <div class="card">
-        <h3>Semana-3 <br/> Calculadora Web</h3>
-        <p>Una calculadora básica hecha con HTML, CSS y JavaScript.</p>
-        <a href="#">Ver más</a>
+        <h3>Semana-3 <br/> Diagrama</h3>
+        <p>Diagrama exel.</p>
+        <a href="https://docs.google.com/spreadsheets/d/1uZKL3w1ifQFyDPiqVZ99NzQVam0-GJDwbgwzowmgKR0/edit?usp=sharing">Ver más</a>
       </div>
       <div class="card">
-        <h3>Semana-4 <br/> Calculadora Web</h3>
-        <p>Una calculadora básica hecha con HTML, CSS y JavaScript.</p>
-        <a href="#">Ver más</a>
+        <h3>Semana-4 <br/> Diagrama</h3>
+        <p>Diagramas entidad-relación. Canva.</p>
+        <a href="https://www.canva.com/design/DAGlHR7sRnU/BD1jjQBBoTI3PwTn5GHwQg/edit?utm_content=DAGlHR7sRnU&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Ver primer diagrama</a>
+        <a href="https://www.canva.com/design/DAGlHn8IZZs/YSB696v8kkTSthTquaMNTA/edit?utm_content=DAGlHn8IZZs&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Ver segundo diagrama</a>
       </div>
       <div class="card">
-        <h3>Semana-5 <br/> Calculadora Web</h3>
-        <p>Una calculadora básica hecha con HTML, CSS y JavaScript.</p>
-        <a href="#">Ver más</a>
+        <h3>Semana-5 <br/> Manual</h3>
+        <p>Manual de creación de cuenta Azure.</p>
+        <a href="https://www.canva.com/design/DAGlj5t7bA0/0mk4jIDYPbYNuw8QnwzFSA/edit?utm_content=DAGlj5t7bA0&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton ">Ver más</a>
       </div>
       <div class="card">
-        <h3>Semana-6 <br/> Calculadora Web</h3>
-        <p>Una calculadora básica hecha con HTML, CSS y JavaScript.</p>
-        <a href="#">Ver más</a>
+        <h3>Semana-6 <br/> Manual</h3>
+        <p>Manual de alojamiento de sitio web en Azure.</p>
+        <a href="https://www.canva.com/design/DAGmIC9TSDM/CM_8nbzstPuOyouCKEC8aw/edit?utm_content=DAGmIC9TSDM&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton ">Ver más</a>
       </div>
       <div class="card">
-        <h3>Semana-7 <br/> Examen Parcial</h3>
-        <p>Una calculadora básica hecha con HTML, CSS y JavaScript.</p>
-        <a href="#">Ver más</a>
+        <h3>Semana-7 <br/> Examen</h3>
+        <p>Examen parcial de Base de Datos II.</p>
+        <a href="https://drive.google.com/file/d/176RycTS8JLJe7M6lAEsWRCpaU3XflwKV/view?usp=sharing ">Ver más</a>
       </div>
       <div class="card">
         <h3>Semana-10-1 <br/> Calculadora Web</h3>
@@ -103,7 +105,7 @@
   </section>
 
   <footer>
-    <p>© 2025 Juan Pérez - Todos los derechos reservados</p>
+    <p>© 2025 Valentin Soto - Todos los derechos reservados</p>
   </footer>
 
   <script src="form.js"></script>
