--- a/form.html
+++ b/form.html
@@ -70,19 +70,14 @@
         <a href="https://drive.google.com/file/d/176RycTS8JLJe7M6lAEsWRCpaU3XflwKV/view?usp=sharing ">Ver más</a>
       </div>
       <div class="card">
-        <h3>Semana-10-1 <br/> Calculadora Web</h3>
-        <p>Una calculadora básica hecha con HTML, CSS y JavaScript.</p>
-        <a href="#">Ver más</a>
+        <h3>Semana-10-1 <br/> Actividad</h3>
+        <p>Consultas multitablas SQLServer.</p>
+        <a href="https://docs.google.com/document/d/160DrpBXw9HtZHKxVwdgQA78dndvcOR0IOYSvB_Rw95E/edit?usp=sharing">Ver más</a>
       </div>
       <div class="card">
-        <h3>Semana-10-2 To-Do App</h3>
-        <p>Una aplicación para gestionar tareas con almacenamiento local.</p>
-        <a href="#">Ver más</a>
-      </div>
-      <div class="card">
-        <h3>Semana-11 Clon de Google</h3>
-        <p>Interfaz simple que simula el buscador de Google.</p>
-        <a href="#">Ver más</a>
+        <h3>Semana-11 <br/> Actividad</h3>
+        <p>Consultas de tablas SQLServer.</p>
+        <a href="https://docs.google.com/document/d/1VOS39nPkEUfoJeNKZtq51qYS6213T4LnUKxo6ynXCPM/edit?usp=sharing">Ver más</a>
       </div>
     </div>
     <div class="card">
