--- a/form.html
+++ b/form.html
@@ -99,15 +99,15 @@
   <div class="card">
         <h3>Semana-14 <br/> Módulo 6 y 7</h3>
         <p>Administración de rendimiento y administración de alta disponibilidad y recuperación de desastres.</p>
-        <a href="#">Módulo 6</a>
-        <a href="#">Módulo 7</a>
+        <a href="https://docs.google.com/document/d/1IX_wXxGpb9elBCUtU7NhOGmoxh_fzXDaIgk4Womvl0w/edit?usp=sharing">Módulo 6</a>
+        <a href="https://docs.google.com/document/d/1soodAWmzmaw6oxRMPDW9RdvCZa6x8f5v86WwNfGJt08/edit?usp=sharing">Módulo 7</a>
       </div>
     </div>
   </section>
   <div class="card">
         <h3>Semana-15 <br/> Módulo 8</h3>
         <p>Administración de instancias en la nube.</p>
-        <a href="#">Módulo 8</a>
+        <a href="https://docs.google.com/document/d/1F67GPtdfwf8xVi36gs8eF388w8_X-jPZaeS8kOG6wzQ/edit?usp=sharing">Módulo 8</a>
       </div>
     </div>
   </section>
