--- a/form.html
+++ b/form.html
@@ -24,91 +24,118 @@
     <a href="#proyectos" class="btn">Ver proyectos</a>
   </section>
 
-  <section id="sobre-mi" class="section">
+  <section id="sobre-mi" class="section sobre-mi">
     <h2>Sobre mí</h2>
-    <p>Soy un estudiante apasionado por el desarrollo web, la inteligencia artificial y las tecnologías emergentes. Siempre estoy aprendiendo nuevas herramientas para mejorar mis habilidades.</p>
+    <div class="sobre-mi-contenido">
+      <img src="imagenes/mi-foto.jpg" alt="Foto de Valentin Soto" class="foto-perfil">
+      <p>
+        Soy un estudiante apasionado por el desarrollo web, la inteligencia artificial y las tecnologías emergentes.
+        Siempre estoy aprendiendo nuevas herramientas para mejorar mis habilidades. Me encanta crear soluciones tecnológicas
+        que generen impacto.
+      </p>
+    </div>
   </section>
 
   <section id="proyectos" class="section">
     <h2>Proyectos</h2>
     <div class="proyectos-container">
+
       <div class="card">
+        <img src="imagenes/semana1.jpg" alt="Semana 1">
         <h3>Semana-1 <br/> Resumen </h3>
         <p>Sobre el libro SGBD.</p>
-        <a href="https://www.canva.com/design/DAGji_mWwSs/zJUd2TxrcH3X4hvvLlT56Q/edit?utm_content=DAGji_mWwSs&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton ">Ver más</a>
+        <a href="https://www.canva.com/design/DAGji_mWwSs/zJUd2TxrcH3X4hvvLlT56Q/edit?utm_content=DAGji_mWwSs&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" class="btn-vermas">Ver más</a>
       </div>
+
       <div class="card">
+        <img src="imagenes/semana2.jpg" alt="Semana 2">
         <h3>Semana-2 <br/> Diagrama</h3>
         <p>Diagramas entidad-relación. Miro.</p>
-        <a href="https://miro.com/app/board/uXjVIEWtAuc=/?share_link_id=802140616388 ">Ver primer diagrama</a>
-        <a href="https://miro.com/app/board/uXjVIEVsPow=/?share_link_id=35838702067 ">Ver segundo diagrama</a>
+        <a href="https://miro.com/app/board/uXjVIEWtAuc=/?share_link_id=802140616388" class="btn-vermas">Ver primer diagrama</a>
+        <a href="https://miro.com/app/board/uXjVIEVsPow=/?share_link_id=35838702067" class="btn-vermas">Ver segundo diagrama</a>
       </div>
+
       <div class="card">
+        <img src="imagenes/semana3.jpg" alt="Semana 3">
         <h3>Semana-3 <br/> Diagrama</h3>
-        <p>Diagrama exel.</p>
-        <a href="https://docs.google.com/spreadsheets/d/1uZKL3w1ifQFyDPiqVZ99NzQVam0-GJDwbgwzowmgKR0/edit?usp=sharing">Ver más</a>
+        <p>Diagrama Excel.</p>
+        <a href="https://docs.google.com/spreadsheets/d/1uZKL3w1ifQFyDPiqVZ99NzQVam0-GJDwbgwzowmgKR0/edit?usp=sharing" class="btn-vermas">Ver más</a>
       </div>
+
       <div class="card">
+        <img src="imagenes/semana4.jpg" alt="Semana 4">
         <h3>Semana-4 <br/> Diagrama</h3>
         <p>Diagramas entidad-relación. Canva.</p>
-        <a href="https://www.canva.com/design/DAGlHR7sRnU/BD1jjQBBoTI3PwTn5GHwQg/edit?utm_content=DAGlHR7sRnU&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Ver primer diagrama</a>
-        <a href="https://www.canva.com/design/DAGlHn8IZZs/YSB696v8kkTSthTquaMNTA/edit?utm_content=DAGlHn8IZZs&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Ver segundo diagrama</a>
+        <a href="https://www.canva.com/design/DAGlHR7sRnU/BD1jjQBBoTI3PwTn5GHwQg/edit?utm_content=DAGlHR7sRnU&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" class="btn-vermas">Ver primer diagrama</a>
+        <a href="https://www.canva.com/design/DAGlHn8IZZs/YSB696v8kkTSthTquaMNTA/edit?utm_content=DAGlHn8IZZs&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" class="btn-vermas">Ver segundo diagrama</a>
       </div>
+
       <div class="card">
+        <img src="imagenes/semana5.jpg" alt="Semana 5">
         <h3>Semana-5 <br/> Manual</h3>
         <p>Manual de creación de cuenta Azure.</p>
-        <a href="https://www.canva.com/design/DAGlj5t7bA0/0mk4jIDYPbYNuw8QnwzFSA/edit?utm_content=DAGlj5t7bA0&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton ">Ver más</a>
+        <a href="https://www.canva.com/design/DAGlj5t7bA0/0mk4jIDYPbYNuw8QnwzFSA/edit?utm_content=DAGlj5t7bA0&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" class="btn-vermas">Ver más</a>
       </div>
+
       <div class="card">
+        <img src="imagenes/semana6.jpg" alt="Semana 6">
         <h3>Semana-6 <br/> Manual</h3>
         <p>Manual de alojamiento de sitio web en Azure.</p>
-        <a href="https://www.canva.com/design/DAGmIC9TSDM/CM_8nbzstPuOyouCKEC8aw/edit?utm_content=DAGmIC9TSDM&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton ">Ver más</a>
+        <a href="https://www.canva.com/design/DAGmIC9TSDM/CM_8nbzstPuOyouCKEC8aw/edit?utm_content=DAGmIC9TSDM&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" class="btn-vermas">Ver más</a>
       </div>
+
       <div class="card">
+        <img src="imagenes/semana7.jpg" alt="Semana 7">
         <h3>Semana-7 <br/> Examen</h3>
         <p>Examen parcial de Base de Datos II.</p>
-        <a href="https://drive.google.com/file/d/176RycTS8JLJe7M6lAEsWRCpaU3XflwKV/view?usp=sharing ">Ver más</a>
+        <a href="https://drive.google.com/file/d/176RycTS8JLJe7M6lAEsWRCpaU3XflwKV/view?usp=sharing" class="btn-vermas">Ver más</a>
       </div>
+
       <div class="card">
+        <img src="imagenes/semana10.jpg" alt="Semana 10">
         <h3>Semana-10-1 <br/> Actividad</h3>
-        <p>Consultas multitablas SQLServer.</p>
-        <a href="https://docs.google.com/document/d/160DrpBXw9HtZHKxVwdgQA78dndvcOR0IOYSvB_Rw95E/edit?usp=sharing">Ver más</a>
+        <p>Consultas multitablas SQL Server.</p>
+        <a href="https://docs.google.com/document/d/160DrpBXw9HtZHKxVwdgQA78dndvcOR0IOYSvB_Rw95E/edit?usp=sharing" class="btn-vermas">Ver más</a>
       </div>
+
       <div class="card">
+        <img src="imagenes/semana11.jpg" alt="Semana 11">
         <h3>Semana-11 <br/> Actividad</h3>
-        <p>Consultas de tablas SQLServer.</p>
-        <a href="https://docs.google.com/document/d/1VOS39nPkEUfoJeNKZtq51qYS6213T4LnUKxo6ynXCPM/edit?usp=sharing">Ver más</a>
+        <p>Consultas de tablas SQL Server.</p>
+        <a href="https://docs.google.com/document/d/1VOS39nPkEUfoJeNKZtq51qYS6213T4LnUKxo6ynXCPM/edit?usp=sharing" class="btn-vermas">Ver más</a>
       </div>
-    </div>
-    <div class="card">
+
+      <div class="card">
+        <img src="imagenes/semana12.jpg" alt="Semana 12">
         <h3>Semana-12 <br/> Módulo 2 y 3</h3>
-        <p>Instalación y configuración de SQL Server y la administración de bases de datos. </p>
-        <a href="https://docs.google.com/document/d/1pgCTyEk372ZlE0WD-0AFdNPJyJG_H-xYVNwDkoB0oWM/edit?usp=sharing">Módulo 2</a>
-        <a href="https://docs.google.com/document/d/1z4n6hq8LsbYQVoF88VB_OuwsydvYFwhODgx_3dUTpNc/edit?usp=sharing">Módulo 3</a>
+        <p>Instalación y configuración de SQL Server y administración de BD.</p>
+        <a href="https://docs.google.com/document/d/1pgCTyEk372ZlE0WD-0AFdNPJyJG_H-xYVNwDkoB0oWM/edit?usp=sharing" class="btn-vermas">Módulo 2</a>
+        <a href="https://docs.google.com/document/d/1z4n6hq8LsbYQVoF88VB_OuwsydvYFwhODgx_3dUTpNc/edit?usp=sharing" class="btn-vermas">Módulo 3</a>
       </div>
-    </div>
-  </section>
-  <div class="card">
-        <h3>Semana-13 <br/>Módulo 4 y 5</h3>
-        <p>Seguridad en SQL Server y consultas avanzadas en SQL Server.</p>
-        <a href="https://docs.google.com/document/d/1TcCVX_GN9ha9BjpijpA1NpJOMd0BzdWKy3DJzh93SaQ/edit?usp=sharing">Módulo 4</a>
-        <a href="https://docs.google.com/document/d/1EVxDVqG44y3c55bBjpeWJQFlezuMom13hznP9hdnuzk/edit?usp=sharing">Módulo 5</a>
+
+      <div class="card">
+        <img src="imagenes/semana13.jpg" alt="Semana 13">
+        <h3>Semana-13 <br/> Módulo 4 y 5</h3>
+        <p>Seguridad y consultas avanzadas en SQL Server.</p>
+        <a href="https://docs.google.com/document/d/1TcCVX_GN9ha9BjpijpA1NpJOMd0BzdWKy3DJzh93SaQ/edit?usp=sharing" class="btn-vermas">Módulo 4</a>
+        <a href="https://docs.google.com/document/d/1EVxDVqG44y3c55bBjpeWJQFlezuMom13hznP9hdnuzk/edit?usp=sharing" class="btn-vermas">Módulo 5</a>
       </div>
-    </div>
-  </section>
-  <div class="card">
+
+      <div class="card">
+        <img src="imagenes/semana14.jpg" alt="Semana 14">
         <h3>Semana-14 <br/> Módulo 6 y 7</h3>
-        <p>Administración de rendimiento y administración de alta disponibilidad y recuperación de desastres.</p>
-        <a href="https://docs.google.com/document/d/1IX_wXxGpb9elBCUtU7NhOGmoxh_fzXDaIgk4Womvl0w/edit?usp=sharing">Módulo 6</a>
-        <a href="https://docs.google.com/document/d/1soodAWmzmaw6oxRMPDW9RdvCZa6x8f5v86WwNfGJt08/edit?usp=sharing">Módulo 7</a>
+        <p>Administración de rendimiento y alta disponibilidad.</p>
+        <a href="https://docs.google.com/document/d/1IX_wXxGpb9elBCUtU7NhOGmoxh_fzXDaIgk4Womvl0w/edit?usp=sharing" class="btn-vermas">Módulo 6</a>
+        <a href="https://docs.google.com/document/d/1soodAWmzmaw6oxRMPDW9RdvCZa6x8f5v86WwNfGJt08/edit?usp=sharing" class="btn-vermas">Módulo 7</a>
       </div>
-    </div>
-  </section>
-  <div class="card">
+
+      <div class="card">
+        <img src="imagenes/semana15.jpg" alt="Semana 15">
         <h3>Semana-15 <br/> Módulo 8</h3>
         <p>Administración de instancias en la nube.</p>
-        <a href="https://docs.google.com/document/d/1F67GPtdfwf8xVi36gs8eF388w8_X-jPZaeS8kOG6wzQ/edit?usp=sharing">Módulo 8</a>
+        <a href="https://docs.google.com/document/d/1F67GPtdfwf8xVi36gs8eF388w8_X-jPZaeS8kOG6wzQ/edit?usp=sharing" class="btn-vermas">Módulo 8</a>
       </div>
+
     </div>
   </section>
 
