--- a/form.html
+++ b/form.html
@@ -137,17 +137,37 @@
       </div>
 
     </div>
-  </section>
+  <section class="contact-section">
+    <div class="contact-container">
+      
+      <!-- Columna izquierda: Información -->
+      <div class="contact-info">
+        <img src="usuario.png" alt="Usuario" class="contact-icon">
+        <h2>INFORMACIÓN DE CONTACTO</h2>
+        <p><img src="mail-icon.png" class="icon"> info.contact@correo.com</p>
+        <p><img src="phone-icon.png" class="icon"> +1(585) 902-8531</p>
+      </div>
 
-  <section id="contacto" class="section">
-    <h2>Contacto</h2>
-    <form id="contact-form">
-      <input type="text" placeholder="Tu nombre" required>
-      <input type="email" placeholder="Tu correo" required>
-      <textarea placeholder="Tu mensaje" required></textarea>
-      <button type="submit">Enviar</button>
-    </form>
-    <p id="msg-enviado"></p>
+      <!-- Columna derecha: Formulario -->
+      <div class="contact-form">
+        <h2>Envía tu Mensaje</h2>
+        <form>
+          <input type="text" placeholder="Nombres" required>
+          <input type="tel" placeholder="Teléfono / Celular" required>
+          <input type="email" placeholder="Correo electrónico" required>
+          <textarea placeholder="Mensaje" required></textarea>
+
+          <div class="form-footer">
+            <div class="logo">
+              <img src="logo.png" alt="Logo" />
+              <span><strong>Cody</strong>Tron</span>
+            </div>
+            <button type="submit">Enviar mensaje</button>
+          </div>
+        </form>
+      </div>
+
+    </div>
   </section>
 
   <footer>
